--- a/afirma-core/pom.xml
+++ b/afirma-core/pom.xml
@@ -8,8 +8,9 @@
 
 	<parent>
 		<groupId>es.gob.afirma</groupId>
-		<artifactId>afirma-client</artifactId>
+		<artifactId>afirma-client-base</artifactId>
 		<version>3.3.2-SNAPSHOT</version>
+<!--  		<relativePath>../afirma-client-base/pom.xml</relativePath>   -->
 	</parent>
 	
 	<dependencies>
@@ -19,4 +20,5 @@
 			<version>0.0.3-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
+	
 </project>
