--- a/afirma-crypto-xmlsignature/pom.xml
+++ b/afirma-crypto-xmlsignature/pom.xml
@@ -8,7 +8,7 @@
 
 	<parent>
 		<groupId>es.gob.afirma</groupId>
-		<artifactId>afirma-client</artifactId>
+		<artifactId>afirma-client-base</artifactId>
 		<version>3.3.2-SNAPSHOT</version>
 	</parent>
 
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>net.java.xades</groupId>
 			<artifactId>jxades</artifactId>
-			<version>0.1.6-SNAPSHOT</version>
+			<version>0.1.3-SNAPSHOT</version>
 		</dependency>
 		
 	</dependencies>
